<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_overflow">
        <menu>
            <item
                android:id="@+id/action_normal"
                android:showAsAction="ifRoom"
                android:title="@string/action_normal"/>
            <item
                android:id="@+id/action_hybrid"
                android:showAsAction="ifRoom"
                android:title="@string/action_hybrid"/>
            <item
                android:id="@+id/action_setellite"
                android:showAsAction="ifRoom"
                android:title="@string/action_setellite"/>
            <item
                android:id="@+id/action_terrain"
                android:showAsAction="ifRoom"
                android:title="@string/action_terrain"/>
            <item
                android:id="@+id/action_none"
                android:showAsAction="ifRoom"
                android:title="@string/action_none"/>
        </menu>
    </item>


</menu>
